# my-simple-blog

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements-dev.txt
database/: schema.sql
templates/: create_post.html  edit_post.html  index.html  post.html
