[project]
name = "my-simple-blog"
version = "0.1.0"
description = "A simple blog application with REST API"
authors = [
    {name = "Developer", email = "developer@example.com"},
]
dependencies = [
    "flask>=3.0.0",
    "jinja2>=3.1.2",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true

[tool.flake8]
max-line-length = 88
ignore = "E203, W503"
